--- a/src/main/resources/templates/readingList.html
+++ b/src/main/resources/templates/readingList.html
@@ -27,7 +27,7 @@
   </div>
   <hr/>
   <h3>Add a book</h3>
-  <form method="POST">
+  <form method="POST" th:action="@{/}">
     <label for="title">Title:</label>
 		<input type="text" name="title" size="50"></input><br/>
 		<label for="author">Author:</label>
