Add the error page

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -17,3 +17,18 @@ body {
 label {
 	font-weight: bold;
 }
+
+/*
+ * Error page
+*/
+.error {
+  color: red;
+}
+
+.errorPage {
+  text-align:center;  
+}
+
+.oops {
+  font-size: 76pt;
+}
